--- a/GenGu Management System/pom.xml
+++ b/GenGu Management System/pom.xml
@@ -45,5 +45,10 @@
 			<artifactId>sqlite-jdbc</artifactId>
 			<version>3.8.11.2</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.derby</groupId>
+			<artifactId>derby</artifactId>
+			<version>10.11.1.1</version>
+		</dependency>
 	</dependencies>
 </project>
