--- a/GenGu Management System/.classpath
+++ b/GenGu Management System/.classpath
@@ -18,5 +18,7 @@
 	</classpathentry>
 	<classpathentry kind="lib" path="G:/Desktop/GenGu/GenGu Management System/lib/substance.jar"/>
 	<classpathentry kind="lib" path="G:/Desktop/GenGu/GenGu Management System/lib/trident.jar"/>
+	<classpathentry kind="lib" path="jgoodies-common-1.8.0.jar" sourcepath="jgoodies-common-1.8.0-sources.jar"/>
+	<classpathentry kind="lib" path="jgoodies-forms-1.8.0.jar" sourcepath="jgoodies-forms-1.8.0-sources.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
