--- a/GenGu Management System/pom.xml
+++ b/GenGu Management System/pom.xml
@@ -50,5 +50,19 @@
 			<artifactId>derby</artifactId>
 			<version>10.11.1.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.pushingpixels</groupId>
+			<artifactId>substance</artifactId>
+			<version>7.0</version>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/lib/substance.jar</systemPath>
+		</dependency>
+		<dependency>
+			<groupId>org.pushingpixels</groupId>
+			<artifactId>trident</artifactId>
+			<version>7.0</version>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/lib/trident.jar</systemPath>
+		</dependency>
 	</dependencies>
 </project>
