--- a/GenGu Management System/pom.xml
+++ b/GenGu Management System/pom.xml
@@ -51,6 +51,11 @@
 			<version>10.11.1.1</version>
 		</dependency>
 		<dependency>
+			<groupId>org.swinglabs</groupId>
+			<artifactId>swingx</artifactId>
+			<version>1.6.1</version>
+		</dependency>
+		<dependency>
 			<groupId>org.pushingpixels</groupId>
 			<artifactId>substance</artifactId>
 			<version>7.0</version>
