add export action

--- a/GenGu Management System/pom.xml
+++ b/GenGu Management System/pom.xml
@@ -69,5 +69,10 @@
 			<scope>system</scope>
 			<systemPath>${project.basedir}/lib/trident.jar</systemPath>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi</artifactId>
+			<version>3.14</version>
+		</dependency>
 	</dependencies>
 </project>
